--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!doctype html>
 <html>
   <head>
-    <title>Marc Lundwall - Personal Website</title>
+    <title>Marc Lundwall</title>
   </head>
+  <body>
+      <p>This is my personal website. WIP!</p>
+  </body>
 </html>
